# new

./: CMakeLists.txt
.cache/clangd/index/: Animal.h.BBE2CBFDC74E024F.idx  Elephant.cpp.974546AE55179A7A.idx  Lion.cpp.7CA1E954DB942E5D.idx  Lion.h.EC3FA58D3FD0F5F6.idx  Penguin.cpp.237193615E8171C2.idx  work.cpp.812D04CBDEA35E28.idx
2024110981考核题/: 2.cpp  4.cpp  5.cpp  考核题(内含第一题和第三题).docx
include/: Animal.h  Elephant.h  Lion.h  Penguin.h  zoo.h
src/: Elephant.cpp  Lion.cpp  Penguin.cpp  zoo.cpp
src2/: work.cpp
